--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
                     </div>
                     <div class="player-info">
                         <h2>Harry Kane</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestias hic eos, laborum molestiaelibero voluptas repellendus neque exercitationem vel.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestias hic eos, laborum
+                            molestiaelibero voluptas repellendus neque exercitationem vel.</p>
                     </div>
                 </div>
                 <div class="player">
