--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                     </div>
                     <div class="player-info">
                         <h2>Lionel Messi</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestias hic eos, laborum
-                            molestiae
-                            libero voluptas repellendus neque exercitationem vel.</p>
+                        <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward and
+                            captains the Argentina national team. He is currently a free agent, having played all his
+                            professional career for La Liga club Barcelona,.</p>
                     </div>
                 </div>
                 <div class="player">
@@ -55,9 +55,8 @@
                     </div>
                     <div class="player-info">
                         <h2>Neymar Jr</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestias hic eos, laborum
-                            molestiae
-                            libero voluptas repellendus neque exercitationem vel.</p>
+                        <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who
+                            plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
                     </div>
                 </div>
                 <div class="player">
@@ -66,9 +65,8 @@
                     </div>
                     <div class="player-info">
                         <h2>Cristiano Ronaldo</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestias hic eos, laborum
-                            molestiae
-                            libero voluptas repellendus neque exercitationem vel.</p>
+                        <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who
+                            plays as a forward for Serie A club Juventus and captains the Portugal national team</p>
                     </div>
                 </div>
                 <div class="player">
@@ -77,9 +75,8 @@
                     </div>
                     <div class="player-info">
                         <h2>Paulo Dybala</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestias hic eos, laborum
-                            molestiae
-                            libero voluptas repellendus neque exercitationem vel.</p>
+                        <p>Paulo Exequiel Dybala is an Argentine professional footballer who plays as a forward for
+                            Serie A club Juventus and the Argentina national team</p>
                     </div>
                 </div>
                 <div class="player">
@@ -88,9 +85,9 @@
                     </div>
                     <div class="player-info">
                         <h2>Mesut Ozil</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestias hic eos, laborum
-                            molestiae
-                            libero voluptas repellendus neque exercitationem vel.</p>
+                        <p>Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper
+                            Lig club Fenerbahçe. Nicknamed "The Assist King", Özil is known for his technical skills,
+                            creativity, agility, and finesse.</p>
                     </div>
                 </div>
                 <div class="player">
@@ -99,9 +96,8 @@
                     </div>
                     <div class="player-info">
                         <h2>Mauro Icardi</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestias hic eos, laborum
-                            molestiae
-                            libero voluptas repellendus neque exercitationem vel.</p>
+                        <p>LMauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for
+                            Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
                     </div>
                 </div>
                 <div class="player">
@@ -110,9 +106,8 @@
                     </div>
                     <div class="player-info">
                         <h2>Di Maria</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestias hic eos, laborum
-                            molestiae
-                            libero voluptas repellendus neque exercitationem vel.</p>
+                        <p>Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club
+                            Paris Saint-Germain and the Argentina national team</p>
                     </div>
                 </div>
                 <div class="player">
@@ -121,9 +116,8 @@
                     </div>
                     <div class="player-info">
                         <h2>Kylian Mbappé</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestias hic eos, laborum
-                            molestiae
-                            libero voluptas repellendus neque exercitationem vel.</p>
+                        <p>Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1
+                            club Paris Saint-Germain and the France national team.</p>
                     </div>
                 </div>
                 <div class="player">
@@ -132,9 +126,8 @@
                     </div>
                     <div class="player-info">
                         <h2>Mohamed Salah</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestias hic eos, laborum
-                            molestiae
-                            libero voluptas repellendus neque exercitationem vel.</p>
+                        <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a
+                            forward for Premier League club Liverpool and captains the Egypt national team.</p>
                     </div>
                 </div>
                 <div class="player">
@@ -143,8 +136,8 @@
                     </div>
                     <div class="player-info">
                         <h2>Harry Kane</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestias hic eos, laborum
-                            molestiaelibero voluptas repellendus neque exercitationem vel.</p>
+                        <p>Harry Edward Kane MBE is an English professional footballer who plays as a striker for
+                            Premier League club Tottenham Hotspur and captains the England national team.</p>
                     </div>
                 </div>
                 <div class="player">
@@ -153,9 +146,8 @@
                     </div>
                     <div class="player-info">
                         <h2>Kevin De Bruyne</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestias hic eos, laborum
-                            molestiae
-                            libero voluptas repellendus neque exercitationem vel.</p>
+                        <p>Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier
+                            League club Manchester City, where he is vice-captain, and the Belgium national team.</p>
                     </div>
                 </div>
                 <div class="player">
@@ -164,9 +156,8 @@
                     </div>
                     <div class="player-info">
                         <h2>Philippe Coutinho</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestias hic eos, laborum
-                            molestiae
-                            libero voluptas repellendus neque exercitationem vel.</p>
+                        <p>Philippe Coutinho is a Belgian professional footballer who plays as a midfielder for Premier
+                            League club Manchester City, where he is vice-captain, and the Belgium national team.</p>
                     </div>
                 </div>
             </div>
