--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Frist Footbll Responsive Website</title>
+    <!-- favicons add -->
+    <link rel="shortcut icon" href="images/Orange Minimalist Food Festival Logo.jpg" type="image/x-icon">
     <!-- CSS Styles Links -->
     <link rel="stylesheet" href="style.css">
     <!-- Google fonts links  -->
