--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                     <div class="player-info">
                         <h2>Lionel Messi</h2>
                         <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward and
-                            captains the Argentina national team. He is currently a free agent, having played all his
-                            professional career for La Liga club Barcelona,.</p>
+                            captains the Argentina national team. He is currently a free agent, having played .</p>
                     </div>
                 </div>
                 <div class="player">
@@ -58,7 +57,7 @@
                     <div class="player-info">
                         <h2>Neymar Jr</h2>
                         <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who
-                            plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
+                            plays as a forward for Ligue 1 club Paris Saint-Germain</p>
                     </div>
                 </div>
                 <div class="player">
@@ -68,7 +67,7 @@
                     <div class="player-info">
                         <h2>Cristiano Ronaldo</h2>
                         <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who
-                            plays as a forward for Serie A club Juventus and captains the Portugal national team</p>
+                            plays as a forward for Serie A club Juventus and captains</p>
                     </div>
                 </div>
                 <div class="player">
@@ -88,8 +87,8 @@
                     <div class="player-info">
                         <h2>Mesut Ozil</h2>
                         <p>Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper
-                            Lig club Fenerbahçe. Nicknamed "The Assist King", Özil is known for his technical skills,
-                            creativity, agility, and finesse.</p>
+                            Lig club Fenerbahçe. Nicknamed "The Assist King".
+                        </p>
                     </div>
                 </div>
                 <div class="player">
@@ -129,7 +128,7 @@
                     <div class="player-info">
                         <h2>Mohamed Salah</h2>
                         <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a
-                            forward for Premier League club Liverpool and captains the Egypt national team.</p>
+                            forward for Premier League club Liverpool and captains</p>
                     </div>
                 </div>
                 <div class="player">
@@ -149,7 +148,7 @@
                     <div class="player-info">
                         <h2>Kevin De Bruyne</h2>
                         <p>Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier
-                            League club Manchester City, where he is vice-captain, and the Belgium national team.</p>
+                            League club Manchester City, where he is vice-captain.</p>
                     </div>
                 </div>
                 <div class="player">
@@ -159,7 +158,7 @@
                     <div class="player-info">
                         <h2>Philippe Coutinho</h2>
                         <p>Philippe Coutinho is a Belgian professional footballer who plays as a midfielder for Premier
-                            League club Manchester City, where he is vice-captain, and the Belgium national team.</p>
+                            League club Manchester City, where he is vice-captain.</p>
                     </div>
                 </div>
             </div>
